# smrt-clk-dashboard

./: .env  .gitignore  README.md  pyproject.toml  run.py  setup.py
.github/agents/: PYQT5-BEST-PRACTICES.agent.md
.github/workflows/: black.yml  pytest.yml  ruff.yml  ty.yml
config/: __init__.py  constants.py  settings.py
smrtclk/controllers/: __init__.py  clock_controller.py  weather_controller.py
smrtclk/models/: __init__.py  clock_model.py  weather_model.py
smrtclk/views/: __init__.py  clock_widget.py  main_window.py  styles.py  weather_widget.py
smrtclk/weather/: __init__.py  weather_api.py  weather_api_mock.py  weather_api_nws.py
specs/: refactor.md
src/clock/: background.py  minute_hand.py
tests/: weather_api_nws_test.py  weather_api_test.py
